# lab01-inheritance-JenniLoboV

./: CMakeLists.txt
src/: CMakeLists.txt  Cuadrado.cpp  Cuadrado.h  Figura.cpp  Figura.h  Lab01Inheritance.cpp  Triangulo.cpp  Triangulo.h  main.cpp
